[gd_scene load_steps=8 format=2]

[ext_resource path="res://Car.gd" type="Script" id=1]
[ext_resource path="res://Marshmallow.gd" type="Script" id=2]
[ext_resource path="res://graphics/marshmallowSkin.png" type="Texture" id=3]
[ext_resource path="res://graphics/marshmallowTint.png" type="Texture" id=4]
[ext_resource path="res://graphics/marshmallowFaces.png" type="Texture" id=5]
[ext_resource path="res://Marsh.anim" type="Animation" id=6]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 22.2764, 26.5967 )

[node name="Car" type="PathFollow2D"]

position = Vector2( -572.295, 868.52 )
rotation = 0.012848
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = false
cubic_interp = true
loop = true
lookahead = 4.0
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="Marshmallow" type="Area2D" parent="." groups=[
"creep",
]]

rotation = 3.08923
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 2 )
_sections_unfolded = [ "Transform", "Visibility" ]
__meta__ = {
"_edit_group_": true
}

[node name="marshmallowSkin" type="Sprite" parent="Marshmallow"]

texture = ExtResource( 3 )
_sections_unfolded = [ "Animation", "Material", "Transform", "Visibility" ]

[node name="unityTint" type="Sprite" parent="Marshmallow"]

modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="creepFaces" type="Sprite" parent="Marshmallow"]

texture = ExtResource( 5 )
hframes = 2
_sections_unfolded = [ "Animation", "Transform", "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Marshmallow"]

shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
anims/Marsh = ExtResource( 6 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "Marsh"

[connection signal="area_exited" from="Marshmallow" to="Marshmallow" method="_on_Marshmallow_area_exited"]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]


